--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abracadabra</title>
     <meta name="description" content="Sistema logístico">
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="RenzoC" />
 
-    <meta property="og:title" content="warehouse-whisperer-13" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="warehouse-proyect" />
+    <meta property="og:description" content="Intern proyect" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/ODAPObk7ghV5G0YGFqWi3NjDvsJ2/social-images/social-1758231756627-Logotipo new (1).png">
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/ODAPObk7ghV5G0YGFqWi3NjDvsJ2/social-images/social-1758231756627-Logotipo new (1).png">
     <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/ODAPObk7ghV5G0YGFqWi3NjDvsJ2/uploads/1758231642898-Capa_0_copia_ddb81169-3c14-4a6f-929f-66030ec7db2a.png">
 </head>
